Update README with project details and structure